--- a/index.html
+++ b/index.html
@@ -1039,10 +1039,15 @@
 <!-- --------------end-------------- -->
 <div class="footer-1">
   <a href="#">home</a>
+  <span>|</span>
   <a href="#">about</a>
+  <span>|</span>
   <a href="#">blog</a>
+  <span>|</span>
   <a href="#">contact</a>
-  <a href="#">terms and condition</a>
+  <span>|</span>
+  <a href="#">terms & condition</a>
+  <span>|</span>
   <a href="#">privacy policy</a>
 </div>
 <!-- ---------end--------- -->
